Null-mark event package